# self-balancing-bicycle

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
.cache/clangd/index/: i2c_bus.cpp.DFC0F9336704919D.idx  i2c_bus.h.15369F046520D6C2.idx  i2c_bus.h.4196B58DE3296F15.idx  i2c_simple_main.c.50DA6722D814088A.idx  imu.h.D7A7FA1272D17126.idx  main.cpp.25747C8818944433.idx  main.cpp.3F07F9DB68D4C53A.idx  main.h.00903F9B96D0A3CF.idx  main.h.FC912EA1A97B04D1.idx  servo.h.6CAA838F3793C48D.idx
components/: i2c_bus.h  imu.h  motor.cpp  servo.h  servo_m.c  servo_motor.h
components/communication/: CMakeLists.txt  communication.cpp  communication.hpp
components/imu/: CMakeLists.txt  i2c_bus.h  imu.cpp  imu.hpp
components/motor/: CMakeLists.txt  motor.cpp  motor.hpp
components/motor_encoder/: CMakeLists.txt  motor_encoder.cpp  motor_encoder.hpp
main/: CMakeLists.txt  Kconfig.projbuild  Telemetry_read.py  control.cpp  main.cpp  main.h  testcamera.cpp
spiffs/: joystick.html
storage/: joystick.html
